Modify info.css to stop overlap of elements

--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -255,6 +255,7 @@
     .title {
         padding-left: 0;
         text-align: center;
+        margin-bottom: 15px;
     }
 
     .game-grid {
